RESOLVED FIXED26082
REGRESSION: Conditionalize CFNetwork-specific logic in WebError.cpp
https://bugs.webkit.org/show_bug.cgi?id=26082
Summary REGRESSION: Conditionalize CFNetwork-specific logic in WebError.cpp
Brent Fulgham
Reported 2009-05-29 11:15:01 PDT
The WebKit Windows Cairo target no longer builds after @r42767, which added a new CFNetwork-specific (rather, WebKitSystemInterface) call. (see http://trac.webkit.org/changeset?new=42767%40trunk%2FWebKit%2Fwin%2FWebError.cpp&old=35460%40trunk%2FWebKit%2Fwin%2FWebError.cpp) This patch adds a CFNetwork guard around this new code, similar to the other similar calls in this file.
Attachments
Correct Windows Cairo build error. (1.08 KB, patch)
2009-05-29 11:20 PDT, Brent Fulgham
darin: review+
Brent Fulgham
Comment 1 2009-05-29 11:20:08 PDT
Created attachment 30781 [details] Correct Windows Cairo build error. Add conditional test around recently-added WebKitSystemInterface call.
Brent Fulgham
Comment 2 2009-05-29 11:52:20 PDT
Landed in r44267.
Note You need to log in before you can comment on or make changes to this bug.