2009-05-29  Brent Fulgham  <bfulgham@webkit.org>

Reviewed by Darin Adler.

        Correct Windows Cairo build error caused by @r42767.
        http://bugs.webkit.org/show_bug.cgi?id=26082.

        * WebError.cpp:
        (WebError::localizedDescription):



Canonical link: https://commits.webkit.org/36103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44267 268f45cc-cd09-0410-ab3c-d52691b4dbfc