WebKit/win/WebError.cpp
@@ -137,10 +137,12 @@ HRESULT STDMETHODCALLTYPE WebError::localizedDescription(
 
     *result = BString(m_error.localizedDescription()).release();
 
+#if PLATFORM(CFNETWORK)
     if (!*result) {
         if (int code = m_error.errorCode())
             *result = BString(wkCFNetworkErrorGetLocalizedDescription(code)).release();
     }
+#endif
 
     return S_OK;
 }
